unpackaged/main/default/objects/tspa__TechSee_Account_Creation__c/tspa__TechSee_Account_Creation__c.object-meta.xml
<CustomObject>
    <label>Visual Remote Assistant - Account Detail</label>
    <nameField>
        <label>Visual Account Creation Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Visual Remote Assistant - Account Detail</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>