unpackaged/main/default/objects/tspa__TechSee_Account_Creation__c/fields/tspa__Account_Activation__c.field-meta.xml
<CustomField>
    <fullName>tspa__Account_Activation__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Account Activation</label>
    <type>Checkbox</type>
</CustomField>