unpackaged/main/default/objects/tspa__TechSee_Account_Creation__c/fields/tspa__AccountCreatedSuccess__c.field-meta.xml
<CustomField>
    <fullName>tspa__AccountCreatedSuccess__c</fullName>
    <label>AccountCreatedSuccess</label>
    <length>254</length>
    <type>Text</type>
</CustomField>