unpackaged/main/default/objects/tspa__TechSee_Account_Creation__c/fields/tspa__AccountId__c.field-meta.xml
<CustomField>
    <fullName>tspa__AccountId__c</fullName>
    <label>AccountId</label>
    <length>254</length>
    <type>Text</type>
</CustomField>