unpackaged/main/default/objects/tspa__TechSee_Account_Creation__c/fields/tspa__AccountPrerequisite__c.field-meta.xml
<CustomField>
    <fullName>tspa__AccountPrerequisite__c</fullName>
    <defaultValue>false</defaultValue>
    <label>AccountPrerequisite</label>
    <type>Checkbox</type>
</CustomField>