unpackaged/main/default/objects/tspa__TechSee_Account_Creation__c/fields/tspa__AccountRegisterSuccess__c.field-meta.xml
<CustomField>
    <fullName>tspa__AccountRegisterSuccess__c</fullName>
    <label>AccountRegisterSuccess</label>
    <length>254</length>
    <type>Text</type>
</CustomField>