unpackaged/main/default/objects/tspa__TechSee_Account_Creation__c/fields/tspa__AccountRetryEndpoint__c.field-meta.xml
<CustomField>
    <fullName>tspa__AccountRetryEndpoint__c</fullName>
    <formula>IF(NOT(ISPICKVAL( tspa__Region1__c ,&#39;&#39;)) ,
&#39;https://&#39;+
IF(ISPICKVAL( tspa__Region1__c ,&#39;AWS Europe&#39;), tspa__baseURL__c, tspa__baseURL_US__c ) +&#39;/public/accounts/retryActivation&#39;,
&#39;&#39;)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>AccountRetryEndpoint</label>
    <type>Text</type>
</CustomField>