unpackaged/main/default/objects/tspa__TechSee_Account_Creation__c/fields/tspa__AccountStatus__c.field-meta.xml
<CustomField>
    <fullName>tspa__AccountStatus__c</fullName>
    <label>AccountStatus</label>
    <length>254</length>
    <type>Text</type>
</CustomField>