unpackaged/main/default/objects/tspa__TechSee_Account_Creation__c/fields/tspa__Activation_Retry_Attempts__c.field-meta.xml
<CustomField>
    <fullName>tspa__Activation_Retry_Attempts__c</fullName>
    <label>Activation Retry  Attempts</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>