unpackaged/main/default/objects/tspa__TechSee_Account_Creation__c/fields/tspa__baseURL_US__c.field-meta.xml
<CustomField>
    <fullName>tspa__baseURL_US__c</fullName>
    <label>baseURL_US</label>
    <length>254</length>
    <type>Text</type>
</CustomField>