unpackaged/main/default/objects/tspa__TechSee_Account_Creation__c/fields/tspa__Configuration__c.field-meta.xml
<CustomField>
    <fullName>tspa__Configuration__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Configuration</label>
    <type>Checkbox</type>
</CustomField>