unpackaged/main/default/objects/tspa__TechSee_Account_Creation__c/fields/tspa__Connected_App_Profiles_Managed__c.field-meta.xml
<CustomField>
    <fullName>tspa__Connected_App_Profiles_Managed__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Connected App - Profiles Managed</label>
    <type>Checkbox</type>
</CustomField>