unpackaged/main/default/objects/tspa__TechSee_Account_Creation__c/fields/tspa__CSP_Trusted_Sites_Configured__c.field-meta.xml
<CustomField>
    <fullName>tspa__CSP_Trusted_Sites_Configured__c</fullName>
    <defaultValue>false</defaultValue>
    <label>CSP Trusted Sites Configured</label>
    <type>Checkbox</type>
</CustomField>