unpackaged/main/default/objects/tspa__TechSee_Account_Creation__c/fields/tspa__Custom_Attributes_Created__c.field-meta.xml
<CustomField>
    <fullName>tspa__Custom_Attributes_Created__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Custom Attributes Created</label>
    <type>Checkbox</type>
</CustomField>