unpackaged/main/default/objects/tspa__TechSee_Account_Creation__c/fields/tspa__EmailMessage__c.field-meta.xml
<CustomField>
    <fullName>tspa__EmailMessage__c</fullName>
    <label>EmailMessage</label>
    <length>131072</length>
    <type>Html</type>
</CustomField>