unpackaged/main/default/objects/tspa__TechSee_Account_Creation__c/fields/tspa__ExperienceCloudDomain__c.field-meta.xml
<CustomField>
    <fullName>tspa__ExperienceCloudDomain__c</fullName>
    <label>Experience Cloud Domain</label>
    <length>255</length>
    <type>Text</type>
</CustomField>