unpackaged/main/default/objects/tspa__TechSee_Account_Creation__c/fields/tspa__GettingStarted__c.field-meta.xml
<CustomField>
    <fullName>tspa__GettingStarted__c</fullName>
    <defaultValue>false</defaultValue>
    <label>GettingStarted</label>
    <type>Checkbox</type>
</CustomField>