unpackaged/main/default/objects/tspa__TechSee_Account_Creation__c/fields/tspa__Language__c.field-meta.xml
<CustomField>
    <fullName>tspa__Language__c</fullName>
    <label>Language</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>nl-nl</fullName>
                <label>Dutch</label>
            </value>
            <value>
                <fullName>en-us</fullName>
                <label>English</label>
            </value>
            <value>
                <fullName>fr-fr</fullName>
                <label>French</label>
            </value>
            <value>
                <fullName>de-de</fullName>
                <label>German</label>
            </value>
            <value>
                <fullName>he-il</fullName>
                <label>Hebrew</label>
            </value>
            <value>
                <fullName>it-it</fullName>
                <label>Italian</label>
            </value>
            <value>
                <fullName>pt-pt</fullName>
                <label>Portuguese</label>
            </value>
            <value>
                <fullName>es-es</fullName>
                <label>Spanish</label>
            </value>
            <value>
                <fullName>sv-se</fullName>
                <label>Swedish</label>
            </value>
            <value>
                <fullName>pl-pl</fullName>
                <label>Polish</label>
            </value>
            <value>
                <fullName>jp-jp</fullName>
                <label>Japanese</label>
            </value>
            <value>
                <fullName>tr-tr</fullName>
                <label>Turkish</label>
            </value>
            <value>
                <fullName>el-gr</fullName>
                <label>Greek</label>
            </value>
            <value>
                <fullName>ru-ru</fullName>
                <label>Russian</label>
            </value>
            <value>
                <fullName>sk-sk</fullName>
                <label>Slovak</label>
            </value>
            <value>
                <fullName>th-th</fullName>
                <label>Thai</label>
            </value>
            <value>
                <fullName>hu-hu</fullName>
                <label>Hungarian</label>
            </value>
            <value>
                <fullName>ko-KR</fullName>
                <label>Korean</label>
            </value>
            <value>
                <fullName>ko_KR</fullName>
                <isActive>false</isActive>
                <label>ko_KR</label>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>