unpackaged/main/default/objects/tspa__TechSee_Account_Creation__c/fields/tspa__Live_Agent_Message_Template__c.field-meta.xml
<CustomField>
    <fullName>tspa__Live_Agent_Message_Template__c</fullName>
    <label>Live AgentMessageTemplate</label>
    <type>TextArea</type>
</CustomField>