unpackaged/main/default/objects/tspa__TechSee_Account_Creation__c/fields/tspa__Metadata_Discovery_Endpoint__c.field-meta.xml
<CustomField>
    <fullName>tspa__Metadata_Discovery_Endpoint__c</fullName>
    <label>Metadata Discovery Endpoint</label>
    <length>254</length>
    <type>Text</type>
</CustomField>