unpackaged/main/default/objects/tspa__TechSee_Account_Creation__c/fields/tspa__Multi_Language__c.field-meta.xml
<CustomField>
    <fullName>tspa__Multi_Language__c</fullName>
    <label>Multi Language</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>