unpackaged/main/default/objects/tspa__TechSee_Account_Creation__c/fields/tspa__OfflineTokenEU__c.field-meta.xml
<CustomField>
    <fullName>tspa__OfflineTokenEU__c</fullName>
    <label>OfflineTokenEU</label>
    <length>175</length>
    <maskChar>asterisk</maskChar>
    <maskType>all</maskType>
    <type>EncryptedText</type>
</CustomField>