unpackaged/main/default/objects/tspa__TechSee_Account_Creation__c/fields/tspa__OfflineTokenUS__c.field-meta.xml
<CustomField>
    <fullName>tspa__OfflineTokenUS__c</fullName>
    <label>OfflineTokenUS</label>
    <length>174</length>
    <maskChar>asterisk</maskChar>
    <maskType>all</maskType>
    <type>EncryptedText</type>
</CustomField>