unpackaged/main/default/objects/tspa__TechSee_Account_Creation__c/fields/tspa__Organization_Id__c.field-meta.xml
<CustomField>
    <fullName>tspa__Organization_Id__c</fullName>
    <label>Organization Id</label>
    <length>18</length>
    <type>Text</type>
</CustomField>