unpackaged/main/default/objects/tspa__TechSee_Account_Creation__c/fields/tspa__Platform_Events_Usage_Settings__c.field-meta.xml
<CustomField>
    <fullName>tspa__Platform_Events_Usage_Settings__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Platform Events Usage Settings</label>
    <type>Checkbox</type>
</CustomField>