unpackaged/main/default/objects/tspa__TechSee_Account_Creation__c/fields/tspa__PrerequisitePostActivation__c.field-meta.xml
<CustomField>
    <fullName>tspa__PrerequisitePostActivation__c</fullName>
    <defaultValue>false</defaultValue>
    <label>PrerequisitePostActivation</label>
    <type>Checkbox</type>
</CustomField>