unpackaged/main/default/objects/tspa__TechSee_Account_Creation__c/fields/tspa__SAML_URL_Copied__c.field-meta.xml
<CustomField>
    <fullName>tspa__SAML_URL_Copied__c</fullName>
    <defaultValue>false</defaultValue>
    <label>SAML URL Copied</label>
    <type>Checkbox</type>
</CustomField>