unpackaged/main/default/objects/tspa__TechSee_Account_Creation__c/fields/tspa__Single_Logout_Endpoint__c.field-meta.xml
<CustomField>
    <fullName>tspa__Single_Logout_Endpoint__c</fullName>
    <label>Single Logout Endpoint</label>
    <length>254</length>
    <type>Text</type>
</CustomField>