unpackaged/main/default/objects/tspa__TechSee_Account_Creation__c/fields/tspa__Source_Organization_Id__c.field-meta.xml
<CustomField>
    <fullName>tspa__Source_Organization_Id__c</fullName>
    <label>Source Organization Id</label>
    <length>18</length>
    <type>Text</type>
</CustomField>