unpackaged/main/default/objects/tspa__TechSee_Account_Creation__c/fields/tspa__StoreConfigurationCategory__c.field-meta.xml
<CustomField>
    <fullName>tspa__StoreConfigurationCategory__c</fullName>
    <label>StoreConfigurationCategory</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>american</fullName>
                <label>USA &amp; Canada App Store user</label>
            </value>
            <value>
                <fullName>european</fullName>
                <label>Non USA &amp; Canada App Store user</label>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>