unpackaged/main/default/objects/tspa__TechSee_Account_Creation__c/fields/tspa__Template_Version__c.field-meta.xml
<CustomField>
    <fullName>tspa__Template_Version__c</fullName>
    <label>Template Version</label>
    <length>255</length>
    <type>Text</type>
</CustomField>