unpackaged/main/default/objects/tspa__TechSee_Account_Creation__c/fields/tspa__TermsURL__c.field-meta.xml
<CustomField>
    <fullName>tspa__TermsURL__c</fullName>
    <label>TermsURL</label>
    <type>TextArea</type>
</CustomField>