unpackaged/main/default/objects/tspa__TechSee_Account_Creation__c/fields/tspa__Token_Available__c.field-meta.xml
<CustomField>
    <fullName>tspa__Token_Available__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Token Available</label>
    <type>Checkbox</type>
</CustomField>