unpackaged/main/default/objects/tspa__TechSee_Account_Creation__c/fields/tspa__useDomainZoneSuffix__c.field-meta.xml
<CustomField>
    <fullName>tspa__useDomainZoneSuffix__c</fullName>
    <defaultValue>&#39;false&#39;</defaultValue>
    <label>useDomainZoneSuffix</label>
    <length>255</length>
    <type>Text</type>
</CustomField>