unpackaged/main/default/objects/tspa__TechSee_Account_Creation__c/fields/tspa__UserCreated__c.field-meta.xml
<CustomField>
    <fullName>tspa__UserCreated__c</fullName>
    <defaultValue>false</defaultValue>
    <label>UserCreated</label>
    <type>Checkbox</type>
</CustomField>