unpackaged/main/default/objects/tspa__TechSee_Account_Creation__c/fields/tspa__VideoComponentAdded__c.field-meta.xml
<CustomField>
    <fullName>tspa__VideoComponentAdded__c</fullName>
    <defaultValue>false</defaultValue>
    <label>VideoComponentAdded</label>
    <type>Checkbox</type>
</CustomField>